# Lightning

./: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE.header  README.md  database.py  docker-compose-prod.yml  docker-compose.yml  example-config.py  example-config.toml  installation.bat  launcher.py  lightning.bat  lightning.py  pyproject.toml  requirements.txt  schema.sql  setup.py
.github/: FUNDING.yml
.github/workflows/: codeql.yml  migratory.yml  poetry.yml  sentry.yml  tests.yml
cogs/: comics.py  common.py  config.py  emoji.py  extras.py  fun.py  garfield.py  git.py  homebrew.py  info.py  lightning-hub.py  load.py  lockdown.py  logger.py  memes.py  meta.py  misc.py  mod.py  mod_note.py  mod_userlog.py  moderation.py  old_commands.py  owner.py  poll.py  powerscrona.py  setup.py  status_switch.py  tags.py  tasks.py  timers.py  toggle_roles.py  utility.py  weeb.py
db/: databasestart.py  mod_check.py  per_guild_config.py  user_log.py
lightning/: __init__.py  __main__.py  bot.py  cache.py  cog.py  commands.py  config.py  constants.py  context.py  converters.py  cooldown.py  core.py  enums.py  errors.py  events.py  flags.py  formatters.py  meta.py  models.py  storage.py  ui.py  views.py
lightning/cli/: guild.py  main.py  migrations.py  tools.py  utils.py
lightning/cogs/: api.py  config.py  dbots.py  emoji.py  fun.py  git.py  help.py  homebrew.py  infractions.py  memes.py  meta.py  misc.py  mod.py  owner.py  prometheus.py  reminders.py  roles.py  stats.py  switchy.py  utilities.py
lightning/cogs/api/: __init__.py  cog.py  menus.py  models.py
lightning/cogs/automod/: __init__.py  cog.py  converters.py  models.py  ui.py
lightning/cogs/config/: __init__.py  cog.py  converters.py  ui.py
lightning/cogs/ext/: README.md  activities.py  antiscam.py  git.py  switchy.py  twlspam.py  welcomer.py
lightning/cogs/fun/: __init__.py  cog.py
lightning/cogs/gatekeeper/: __init__.py  cog.py  models.py  ui.py
lightning/cogs/homebrew/: __init__.py  cog.py  ui.py
lightning/cogs/info/: __init__.py  bot_meta.py  converters.py  discord_meta.py  message.py
lightning/cogs/infractions/: __init__.py  cog.py  converters.py  ui.py
lightning/cogs/listeners/: README.md  automod.py  events.py  features.py  logging.py  modlog.py  state.py  tracking.py
lightning/cogs/mod/: __init__.py  cog.py  converters.py  flags.py
lightning/cogs/modlog/: __init__.py  cog.py  ui.py  utils.py
lightning/cogs/reminders/: __init__.py  cog.py  converters.py  ui.py
lightning/cogs/reports/: __init__.py  cog.py  ui.py
lightning/cogs/roles/: __init__.py  cog.py  menus.py  ui.py
lightning/utils/: automod_parser.py  checks.py  emitters.py  helpers.py  menus.py  modlogformats.py  nin_updates.py  paginator.py  time.py  ui.py  views.py
lightning/views/: config_uis.py  homebrew_uis.py
migration/: Freezefile.yaml  migration.py
migrations/: 0001_initial.sql  0002_temp_mute_role.sql  0003_logging.sql  0004_automod.sql  0005_commands_stats.sql  0006_column_renames.sql  0007_welcomer.sql  0008_reports.sql  0009_initial_basic_automod_rules.sql  0010_initial_warn_thresholds.sql  0011_timezone_support.sql  0012_remove_socket_stats.sql  0013_migrate_incorrect_timer_ids.py  0013_migrate_mutes.py  0014_gatekeeper.sql  0015_antiscam_experiment.sql  0016_new_mod_command_options.sql  0017_fix_pending_gk_members.sql  0017_initial_premium.sql  0018_automod_metrics.sql  0019_gatekeeper_honeypot.sql  0020_last_spoke.sql  0021_heat_based_automod.sql  20210128_01_dkC4d-3-0-0-migration.sql  20210609_01_YXSjP-3-2-0.sql  20210609_01_YXSjP.sql  20210622_01_U0aRl-3-2-0.py  20211013_01_343eu-3-3-0.sql  20220307_01_pfcuE-4-0-0.sql
resources/: botemojis.py  memes.json  music_list.json  songs.json  status_switching.json
resources/v3-migrations/: 20210128_01_dkC4d-initial.sql  20210622_01_U0aRl-3-2-0.py
scripts/: schema.sql
tests/: test_antiscam.py  test_arg_limit.py  test_heat_system.py
utils/: bot_mgmt.py  cache.py  checks.py  converters.py  custom_prefixes.py  database.py  errors.py  flags.py  guild_config.py  http.py  modlog_formatter.py  nin_updates.py  paginator.py  paginators_jsk.py  restrictions.py  shell.py  time.py  user_log.py
