[tool.poetry]
name = "Lightning.py"
version = "4.10.0"
description = "Powerful moderation & utilities Discord App (Bot)"
authors = ["LightSage <lightsage01@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://gitlab.com/lightning-bot/Lightning"
packages = [
    { include = "lightning/**/*.py" }, 
    { include = "LICENSE" },
    { include = "LICENSE.header" }
]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.12"
"discord.py" = {git = "https://github.com/Rapptz/discord.py.git", branch="master", extras = ["speed"]}
python-dateutil = "^2.8.1"
parsedatetime = "^2.6"
psutil = "^5.7.2"
tabulate = "^0.9.0"
feedparser = "^6.0.10"
asyncpg = "^0.30.0"
discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus.git"}
lru_dict = "^1.3.0"
sentry-sdk = ">=2.0.0,<3.0.0"
py-flags = "^1.1.4"
jishaku = "^2.6.0"
rapidfuzz = "^3.0.0"
typer = "^0.15.1"
tomlkit = "^0.13.2"
uvloop = {version = "^0.21.0", platform = "linux"}
orjson = "^3.6.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.1"
sanctum-tc = "^0.8.0"
objgraph = "^3.5.0"
Wand = "^0.6.11"
rich = "^13.3.2"
setuptools = "^75.1.0"
wheel = "^0.43.0"
matplotlib = "^3.7.0"
numpy = "1.26.4"
redis = {extras = ["hiredis"], version = "^5.0.1"}
unidecode = "^1.3.6"
prometheus-async = "^22.2.0"
spacy = "^3.7.5"
pandas = "^2.2.2"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl"}

[tool.poetry.scripts]
lightning = 'lightning.cli.main:parser'

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"
isort = "^5.12.0"
pre-commit = "^3.2.0"

[tool.autopep8]
max_line_length = 120
ignore = ["E301", "F402"]
in-place = true
recursive = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
