[project]
name = "Lightning"
version = "4.10.0"
description = "Powerful moderation & utilities Discord App (Bot)"
authors = [{name="LightSage", email="lightsage01@gmail.com"}]
license = "AGPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.9.0,<3.12"

[project.urls]
homepage = "https://lightningbot.app/"
repository = "https://github.com/lightning-bot/Lightning"

[tool.poetry]
requires-poetry = ">=2.0"
packages = [
    { include = "lightning/**/*.py" }, 
    { include = "LICENSE" },
    { include = "LICENSE.header" }
]

[tool.poetry.dependencies]
"discord.py" = {git = "https://github.com/Rapptz/discord.py.git", branch="master", extras = ["speed"]}
python-dateutil = "^2.8.1"
parsedatetime = "^2.6"
psutil = "^7.0.0"
tabulate = "^0.9.0"
feedparser = "^6.0.10"
asyncpg = "^0.30.0"
discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus.git"}
lru_dict = "^1.3.0"
sentry-sdk = ">=2.0.0,<3.0.0"
py-flags = "^1.1.4"
jishaku = "^2.6.0"
rapidfuzz = "^3.0.0"
typer = "^0.16.0"
tomlkit = "^0.13.2"
uvloop = {version = "^0.21.0", platform = "linux"}
orjson = "^3.6.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.1"
sanctum-tc = "^0.8.0"
objgraph = "^3.5.0"
Wand = "^0.6.11"
rich = "^14.0.0"
setuptools = "^80.9.0"
matplotlib = "^3.7.0"
numpy = "1.26.4"
redis = {extras = ["hiredis"], version = "^6.4.0"}
unidecode = "^1.3.6"
prometheus-async = "^25.1.0"
spacy = "^3.8.5"
pandas = "^2.2.2"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl"}

[project.scripts]
lightning = "lightning.cli.main:parser"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.8"
isort = "^6.0.1"
pre-commit = "^4.2.0"
pytest = "^8.4.1"

[tool.autopep8]
max_line_length = 120
ignore = ["E301", "F402"]
in-place = true
recursive = true

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
